Bug 209671 - kopete crash in liboscar on reconnect to ICQ after upgrade to kde 4.3.2
Summary: kopete crash in liboscar on reconnect to ICQ after upgrade to kde 4.3.2
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 212153 219447 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-06 21:28 UTC by ancow
Modified: 2009-12-23 22:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ancow 2009-10-06 21:28:26 UTC
Application that crashed: kopete
Version of the application: 0.80.2
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.28-15-generic i686
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
Kopete crashed while I was entering a message to one of my ICQ contacts while it re-connected to ICQ.

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 0 (LWP 22427)]

Thread 4 (Thread 0xb29b1b90 (LWP 22689)):
#0  0xb5b8f0ac in clock_gettime () from /lib/tls/i686/cmov/librt.so.1
#1  0xb6d9b04b in QTimerInfoList::getTime (this=0x88ede8c, t=@0x88edeb0) at kernel/qeventdispatcher_unix.cpp:339
#2  0xb6d9b221 in QTimerInfoList::updateCurrentTime (this=0x88ede8c) at kernel/qeventdispatcher_unix.cpp:297
#3  0xb6d9ce0c in QTimerInfoList::timerWait (this=0x88ede8c, tm=@0xb29b1124) at kernel/qeventdispatcher_unix.cpp:420
#4  0xb6d994da in timerSourcePrepare (source=0xb5b92ff4, timeout=0xb29b1178) at kernel/qeventdispatcher_glib.cpp:141
#5  0xb5b0f9c0 in IA__g_main_context_prepare (context=0x8896b40, priority=0xb29b11e8) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2134
#6  0xb5b0fdda in g_main_context_iterate (context=0x8896b40, block=1, dispatch=1, self=0x883e858) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2428
#7  0xb5b10268 in IA__g_main_context_iteration (context=0x8896b40, may_block=1) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2511
#8  0xb6d99317 in QEventDispatcherGlib::processEvents (this=0x8896ad0, flags={i = -1298460056}) at kernel/qeventdispatcher_glib.cpp:329
#9  0xb6d6c1fa in QEventLoop::processEvents (this=0x8873d98, flags={i = -1298459992}) at kernel/qeventloop.cpp:149
#10 0xb6d6c642 in QEventLoop::exec (this=0x8873d98, flags={i = -1298459848}) at kernel/qeventloop.cpp:201
#11 0xb2b74e59 in QCA::SyncThread::run () from /usr/lib/libqca.so.2
#12 0xb6c79132 in QThreadPrivate::start (arg=0x8694580) at thread/qthread_unix.cpp:188
#13 0xb5cb74ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#14 0xb608c49e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0xb1cc2b90 (LWP 22690)):
#0  0xb5b8f0ae in clock_gettime () from /lib/tls/i686/cmov/librt.so.1
#1  0xb6d9b04b in QTimerInfoList::getTime (this=0x89f186c, t=@0x89f1890) at kernel/qeventdispatcher_unix.cpp:339
#2  0xb6d9b221 in QTimerInfoList::updateCurrentTime (this=0x89f186c) at kernel/qeventdispatcher_unix.cpp:297
#3  0xb6d9ce0c in QTimerInfoList::timerWait (this=0x89f186c, tm=@0xb1cc2184) at kernel/qeventdispatcher_unix.cpp:420
#4  0xb6d994da in timerSourcePrepare (source=0x1, timeout=0xb1cc21d8) at kernel/qeventdispatcher_glib.cpp:141
#5  0xb5b0f9c0 in IA__g_main_context_prepare (context=0x89f0fb8, priority=0xb1cc2248) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2134
#6  0xb5b0fdda in g_main_context_iterate (context=0x89f0fb8, block=1, dispatch=1, self=0x89f2318) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2428
#7  0xb5b10268 in IA__g_main_context_iteration (context=0x89f0fb8, may_block=1) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2511
#8  0xb6d99317 in QEventDispatcherGlib::processEvents (this=0x89d13d8, flags={i = -1312021816}) at kernel/qeventdispatcher_glib.cpp:329
#9  0xb6d6c1fa in QEventLoop::processEvents (this=0x89d5548, flags={i = -1312021752}) at kernel/qeventloop.cpp:149
#10 0xb6d6c642 in QEventLoop::exec (this=0x89d5548, flags={i = -1312021704}) at kernel/qeventloop.cpp:201
#11 0xb2de96d2 in XMPP::SyncThread::run (this=0x89f59f0) at /build/buildd/kdenetwork-4.3.2/kopete/protocols/jabber/libiris/iris/irisnet/corelib/netinterface.cpp:151
#12 0xb6c79132 in QThreadPrivate::start (arg=0x89f59f0) at thread/qthread_unix.cpp:188
#13 0xb5cb74ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#14 0xb608c49e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xb14c1b90 (LWP 22691)):
#0  0xb7fb6430 in __kernel_vsyscall ()
#1  0xb5cbb0e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb609b2ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb6c7a172 in QWaitCondition::wait (this=0x8696668, mutex=0x8696664, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#4  0xb754eac2 in QHostInfoAgent::run (this=0x8696658) at kernel/qhostinfo.cpp:260
#5  0xb6c79132 in QThreadPrivate::start (arg=0x8696658) at thread/qthread_unix.cpp:188
#6  0xb5cb74ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb608c49e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb561a700 (LWP 22427)):
[KCrash Handler]
#6  QString::operator= (this=0x10, other=@0xbfad1d98) at tools/qstring.cpp:1132
#7  0xb20829cc in TypingNotifyTask::setParams (this=0x0, contact=@0xbfad1d98, notifyType=2) at /build/buildd/kdenetwork-4.3.2/kopete/protocols/oscar/liboscar/tasks/typingnotifytask.cpp:117
#8  0xb1fc1a5f in Client::sendTyping (this=0x880e108, contact=@0xbfad1d98, typing=true) at /build/buildd/kdenetwork-4.3.2/kopete/protocols/oscar/liboscar/client.cpp:1410
#9  0xb20f95e4 in OscarContact::slotTyping (this=0x87b13c8, typing=true) at /build/buildd/kdenetwork-4.3.2/kopete/protocols/oscar/oscarcontact.cpp:282
#10 0xb20ffe8e in OscarContact::qt_metacall (this=0x87b13c8, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0xbfad1f1c)
    at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/protocols/oscar/oscarcontact.moc:121
#11 0xb211701a in ICQContactBase::qt_metacall (this=0x87b13c8, _c=QMetaObject::InvokeMetaMethod, _id=43, _a=0xbfad1f1c)
    at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/protocols/oscar/icqcontactbase.moc:62
#12 0xb218637a in ICQContact::qt_metacall (this=0x87b13c8, _c=QMetaObject::InvokeMetaMethod, _id=43, _a=0xbfad1f1c)
    at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/protocols/oscar/icq/icqcontact.moc:119
#13 0xb6d831b8 in QMetaObject::activate (sender=0x8a428f8, from_signal_index=18, to_signal_index=18, argv=0xbfad1f1c) at kernel/qobject.cpp:3113
#14 0xb6d83e42 in QMetaObject::activate (sender=0x8a428f8, m=0xb7d4b864, local_signal_index=14, argv=0xbfad1f1c) at kernel/qobject.cpp:3187
#15 0xb7cbf559 in Kopete::ChatSession::myselfTyping (this=0x8a428f8, _t1=true) at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/libkopete/kopetechatsession.moc:291
#16 0xb7cbf585 in Kopete::ChatSession::typing (this=0x8a428f8, t=<value optimized out>) at /build/buildd/kdenetwork-4.3.2/kopete/libkopete/kopetechatsession.cpp:435
#17 0xb7cc2aa2 in Kopete::ChatSession::qt_metacall (this=0x8a428f8, _c=QMetaObject::InvokeMetaMethod, _id=38, _a=0xbfad204c)
    at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/libkopete/kopetechatsession.moc:209
#18 0xb6d831b8 in QMetaObject::activate (sender=0x8b5c930, from_signal_index=15, to_signal_index=15, argv=0xbfad204c) at kernel/qobject.cpp:3113
#19 0xb6d83e42 in QMetaObject::activate (sender=0x8b5c930, m=0xb2ffa68c, local_signal_index=1, argv=0xbfad204c) at kernel/qobject.cpp:3187
#20 0xb2fe06a9 in ChatTextEditPart::typing (this=0x8b5c930, _t1=true) at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/kopete/chatwindow/chattexteditpart.moc:143
#21 0xb2fe06d5 in ChatTextEditPart::slotRepeatTypingTimer (this=0x8b5c930) at /build/buildd/kdenetwork-4.3.2/kopete/kopete/chatwindow/chattexteditpart.cpp:455
#22 0xb2fe421d in ChatTextEditPart::qt_metacall (this=0x8b5c930, _c=QMetaObject::InvokeMetaMethod, _id=14, _a=0xbfad2118)
    at /build/buildd/kdenetwork-4.3.2/obj-i486-linux-gnu/kopete/kopete/chatwindow/chattexteditpart.moc:120
#23 0xb6d831b8 in QMetaObject::activate (sender=0x8ba0220, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3113
#24 0xb6d83e42 in QMetaObject::activate (sender=0x8ba0220, m=0xb6e60904, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3187
#25 0xb6dbf687 in QTimer::timeout (this=0x8ba0220) at .moc/release-shared/moc_qtimer.cpp:128
#26 0xb6d895ce in QTimer::timerEvent (this=0x8ba0220, e=0xbfad259c) at kernel/qtimer.cpp:261
#27 0xb6d7e16f in QObject::event (this=0x8ba0220, e=0xbfad259c) at kernel/qobject.cpp:1075
#28 0xb6351d3c in QApplicationPrivate::notify_helper (this=0x836fb30, receiver=0x8ba0220, e=0xbfad259c) at kernel/qapplication.cpp:4056
#29 0xb635a03e in QApplication::notify (this=0xbfad282c, receiver=0x8ba0220, e=0xbfad259c) at kernel/qapplication.cpp:3603
#30 0xb72d249d in KApplication::notify (this=0xbfad282c, receiver=0x8ba0220, event=0xbfad259c) at /build/buildd/kde4libs-4.3.2/kdeui/kernel/kapplication.cpp:302
#31 0xb6d6dbcb in QCoreApplication::notifyInternal (this=0xbfad282c, receiver=0x8ba0220, event=0xbfad259c) at kernel/qcoreapplication.cpp:610
#32 0xb6d9cd51 in QTimerInfoList::activateTimers (this=0x8372494) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#33 0xb6d993a0 in timerSourceDispatch (source=0x8372460) at kernel/qeventdispatcher_glib.cpp:165
#34 0xb5b0cb88 in IA__g_main_context_dispatch (context=0x8371c90) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:1814
#35 0xb5b100eb in g_main_context_iterate (context=0x8371c90, block=1, dispatch=1, self=0x836f718) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2448
#36 0xb5b10268 in IA__g_main_context_iteration (context=0x8371c90, may_block=1) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2511
#37 0xb6d992f8 in QEventDispatcherGlib::processEvents (this=0x8339fc8, flags={i = -1079171304}) at kernel/qeventdispatcher_glib.cpp:327
#38 0xb63f3a75 in QGuiEventDispatcherGlib::processEvents (this=0x8339fc8, flags={i = -1079171256}) at kernel/qguieventdispatcher_glib.cpp:202
#39 0xb6d6c1fa in QEventLoop::processEvents (this=0xbfad27c0, flags={i = -1079171192}) at kernel/qeventloop.cpp:149
#40 0xb6d6c642 in QEventLoop::exec (this=0xbfad27c0, flags={i = -1079171128}) at kernel/qeventloop.cpp:201
#41 0xb6d6eae9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#42 0xb6351bb7 in QApplication::exec () at kernel/qapplication.cpp:3525
#43 0x08059893 in main (argc=3, argv=0xbfad2c34) at /build/buildd/kdenetwork-4.3.2/kopete/kopete/main.cpp:104

Reported using DrKonqi
Comment 1 Dario Andres 2009-10-28 13:33:50 UTC
From bug 212153:
---
"kopete icq crashes when offline and typing into chat window"
Comment 2 Dario Andres 2009-10-28 13:33:55 UTC
*** Bug 212153 has been marked as a duplicate of this bug. ***
Comment 3 Roman Jarosz 2009-10-29 23:09:25 UTC
SVN commit 1042494 by rjarosz:

Fix bug 209671: Kopete crashes on reconnect.

BUG: 209671



 M  +1 -1      client.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042494
Comment 4 Roman Jarosz 2009-10-30 01:16:15 UTC
SVN commit 1042520 by rjarosz:

Backport commit 1042494.
Fix bug 209671: Kopete crashes on reconnect.
 
CCBUG: 209671



 M  +1 -1      client.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042520
Comment 5 Roman Jarosz 2009-12-23 22:33:19 UTC
*** Bug 219447 has been marked as a duplicate of this bug. ***