Fix bug 209671: Kopete crashes on reconnect.

BUG: 209671


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1042494